// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UnknownDirectoryError > renders correctly when deploy is passed 1`] = `
"A ".gadget/sync.json" file is missing in this directory:

  /Users/jane/doe

If you're certain you want to use this directory, you can run
"ggt deploy" again with the "--allow-unknown-directory" flag:

  ggt deploy --allow-unknown-directory"
`;

exports[`UnknownDirectoryError > renders correctly when dev is passed 1`] = `
"A ".gadget/sync.json" file is missing in this directory:

  /Users/jane/doe

If you're running "ggt dev" for the first time, we recommend
using a gadget specific directory like this:

  ggt dev ~/gadget/test

To use a non-empty directory without a ".gadget/sync.json" file,
run "ggt dev" again with the "--allow-unknown-directory" flag:

  ggt dev /Users/jane/doe --allow-unknown-directory"
`;

exports[`UnknownDirectoryError > renders correctly when open is passed 1`] = `
"A ".gadget/sync.json" file is missing in this directory:

  /Users/jane/doe

In order to use "ggt open", you must run it within a directory
that has already been initialized with "ggt dev"."
`;

exports[`UnknownDirectoryError > renders correctly when pull is passed 1`] = `
"A ".gadget/sync.json" file is missing in this directory:

  /Users/jane/doe

If you're certain you want to use this directory, you can run
"ggt pull" again with the "--allow-unknown-directory" flag:

  ggt pull --allow-unknown-directory"
`;

exports[`UnknownDirectoryError > renders correctly when push is passed 1`] = `
"A ".gadget/sync.json" file is missing in this directory:

  /Users/jane/doe

If you're certain you want to use this directory, you can run
"ggt push" again with the "--allow-unknown-directory" flag:

  ggt push --allow-unknown-directory"
`;

exports[`UnknownDirectoryError > renders correctly when status is passed 1`] = `
"A ".gadget/sync.json" file is missing in this directory:

  /Users/jane/doe

In order to use "ggt status", you must run it within a directory
that has already been initialized with "ggt dev"."
`;

exports[`UnknownDirectoryError > renders correctly when the file exists but is invalid 1`] = `
"A ".gadget/sync.json" file is missing in this directory:

  /Users/jane/doe

If you're running "ggt dev" for the first time, we recommend
using a gadget specific directory like this:

  ggt dev ~/gadget/test

To use a non-empty directory without a ".gadget/sync.json" file,
run "ggt dev" again with the "--allow-unknown-directory" flag:

  ggt dev /Users/jane/doe --allow-unknown-directory"
`;
